<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tortilla5"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.adminportatil.tortillap.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="262dp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:text="@string/Direccion"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginBottom="11dp"
        app:layout_constraintVertical_bias="0.888"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:text="@string/tlfno"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="115dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="68dp"
        android:layout_height="56dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/mapa"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.05"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuestra_ubicacion"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />


</android.support.constraint.ConstraintLayout>
